Fix #68 layout issue where 50% fixed width is not being respected.

--- a/Rnwood.Smtp4dev/ClientApp/css/site.css
+++ b/Rnwood.Smtp4dev/ClientApp/css/site.css
@@ -23,6 +23,7 @@ html, body {
 
 .el-tab-pane {
     flex: 1 0 0;
+    overflow: auto;
 }
 
 .el-tabs__content {
